Fixed spacing issue

--- a/des157a/studio1/styles.css
+++ b/des157a/studio1/styles.css
@@ -116,7 +116,7 @@ footer nav ul li a {
 }
 
 pre {
-    margin-left: -240px;
+    margin-left: -210px;
     border: 2px yellow solid;
 }
 
